frontend improvements swagger improvements
