# arena_server/src/public/swagger.json
@@ -677,8 +677,11 @@
 				"type": "object",
 				"additionalProperties": false
 			},
-			"WhoAmiIResponse": {
+			"SessionInfoResponse": {
 				"properties": {
+					"dbname": {
+						"type": "string"
+					},
 					"ip": {
 						"type": "string"
 					},
@@ -691,7 +694,22 @@
 					}
 				},
 				"required": [
-					"ip",
+					"dbname",
+					"ip"
+				],
+				"type": "object"
+			},
+			"WhoAmiIResponse": {
+				"properties": {
+					"name": {
+						"type": "string",
+						"nullable": true
+					},
+					"username": {
+						"type": "string"
+					}
+				},
+				"required": [
 					"name",
 					"username"
 				],
@@ -710,14 +728,14 @@
 		}
 	},
 	"info": {
-		"title": "SLHPC23 Arena",
+		"title": "SLCEE-2023-PC Arena",
 		"version": "1.0.0",
-		"description": "**SAP Labs CEE Hub Programming Competition 2023 Arean server**.\n\nYou can find more information about the game and the competititon rules at [github/SLH_SPC_2022](https://github.com/afarago/SLH_SPC_2022).  \nFor a test run, you can use the crash test dummy user `000000000000000000000000/dummypass`.  \n*Note: All the APIs expect and return application/json*.",
+		"description": "**SAP Labs CEE Hub Programming Competition 2023 Arena server**.\n\nYou can find more information about the game and the competititon rules at [github/SLH_SPC_2022](https://github.com/afarago/SLH_SPC_2022).  \nFor a test run, you can use the crash test dummy user `000000000000000000000000/dummypass`.  \n*Note: All the APIs expect and return application/json*.",
 		"license": {
 			"name": "ISC"
 		},
 		"contact": {
-			"email": "DL SLHPC23 <DL_637A3F6466D808029A65636A@global.corp.sap>"
+			"email": "DL SLCEE 2023 PC <DL_637A3F6466D808029A65636A@global.corp.sap>"
 		}
 	},
 	"openapi": "3.0.0",
@@ -1407,6 +1425,34 @@
 						}
 					}
 				]
+			}
+		},
+		"/api/sessioninfo": {
+			"get": {
+				"operationId": "GetSessionInfo",
+				"responses": {
+					"200": {
+						"description": "The id of the authenticated User.",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/SessionInfoResponse"
+								}
+							}
+						}
+					}
+				},
+				"description": "Returns information on authenticated User",
+				"summary": "Returns authenticated User",
+				"tags": [
+					"Diagnostic"
+				],
+				"security": [
+					{
+						"basic": []
+					}
+				],
+				"parameters": []
 			}
 		},
 		"/api/whoami": {
